Try exporting again.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Build-Web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build-Web.data.gz",
-        frameworkUrl: buildUrl + "/Build-Web.framework.js.gz",
-        codeUrl: buildUrl + "/Build-Web.wasm.gz",
+        dataUrl: buildUrl + "/Build-Web.data.unityweb",
+        frameworkUrl: buildUrl + "/Build-Web.framework.js.unityweb",
+        codeUrl: buildUrl + "/Build-Web.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "New Unity Project",
